# torch-workshop

./: .gitignore  README.md  custom.css  preamble.qmd  presentation.qmd  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
