[tool.poetry]
name = "torch-workshop"
version = "0.1.0"
description = ""
authors = ["Damian Owerko <Damowerko@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
jupyter = "^1.0.0"
matplotlib = "^3.8.2"
plotly = "^5.18.0"
torch = "^2.2.0"
seaborn = "^0.13.2"
pandas = "^2.2.0"
pyarrow = "^15.0.0"
tqdm = "^4.66.2"
tabulate = "^0.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
